fix: more contrast on hero and carousel

--- a/styles/style.css
+++ b/styles/style.css
@@ -372,18 +372,19 @@ header {
 .hero-information p {
   color: #fff;
   text-align: center;
-  text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 4px 6px rgba(0, 0, 0, 1);
 }
 
 .carousel-slide-information p,
 .hero-information p {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
 }
 
 .carousel-slide-information h3,
 .hero-information h1 {
   font-weight: bold;
-  font-size: 32px;
+  font-size: 38px;
   line-height: 36px;
 }
 
